--- a/Fantasy/Fantasy.Shared/Resources/Literals.resx
+++ b/Fantasy/Fantasy.Shared/Resources/Literals.resx
@@ -150,4 +150,91 @@
   <data name="Country" xml:space="preserve">
     <value>Country</value>
   </data>
+  <data name="Confirmation" xml:space="preserve">
+    <value>Confirmation</value>
+  </data>
+  <data name="LeaveAndLoseChanges" xml:space="preserve">
+    <value>Do you want to leave the page and lose your changes?</value>
+  </data>
+  <data name="SaveChanges" xml:space="preserve">
+    <value>Save Changes</value>
+  </data>
+  <data name="Return" xml:space="preserve">
+    <value>Return</value>
+  </data>
+  <data name="Create" xml:space="preserve">
+    <value>Create</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="RecordSavedOk" xml:space="preserve">
+    <value>Record saved successfully.</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="DeleteConfirm" xml:space="preserve">
+    <value>Are you sure to delete the {0}: {1}?</value>
+  </data>
+  <data name="RecordDeletedOk" xml:space="preserve">
+    <value>Record deleted successfully.</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Yes</value>
+  </data>
+  <data name="ERR001" xml:space="preserve">
+    <value>Record not found.</value>
+  </data>
+  <data name="ERR002" xml:space="preserve">
+    <value>Cannot be deleted because it has related records.</value>
+  </data>
+  <data name="ERR003" xml:space="preserve">
+    <value>The record you are trying to create already exists.</value>
+  </data>
+  <data name="Team" xml:space="preserve">
+    <value>Team</value>
+  </data>
+  <data name="MaxLength" xml:space="preserve">
+    <value>Field {0} cannot be longer than {1} characters.</value>
+  </data>
+  <data name="RequiredField" xml:space="preserve">
+    <value>Field {0} is required.</value>
+  </data>
+  <data name="ERR004" xml:space="preserve">
+    <value>The country Id is not valid.</value>
+  </data>
+  <data name="ERR005" xml:space="preserve">
+    <value>The team Id is not valid.</value>
+  </data>
+  <data name="SelectFile" xml:space="preserve">
+    <value>Select a File</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
+  <data name="Teams" xml:space="preserve">
+    <value>Teams</value>
+  </data>
+  <data name="SelectACountry" xml:space="preserve">
+    <value>Select a Country</value>
+  </data>
+  <data name="RecordsNumber" xml:space="preserve">
+    <value>Records Number</value>
+  </data>
+  <data name="All" xml:space="preserve">
+    <value>All</value>
+  </data>
+  <data name="Filter" xml:space="preserve">
+    <value>Filter</value>
+  </data>
+  <data name="Clean" xml:space="preserve">
+    <value>Clean</value>
+  </data>
+  <data name="Actions" xml:space="preserve">
+    <value>Actions</value>
+  </data>
+  <data name="RecordCreatedOk" xml:space="preserve">
+    <value>Record created successfully.</value>
+  </data>
 </root>
