--- a/Fantasy/Fantasy.Shared/Resources/Literals.resx
+++ b/Fantasy/Fantasy.Shared/Resources/Literals.resx
@@ -196,10 +196,10 @@
     <value>Team</value>
   </data>
   <data name="MaxLength" xml:space="preserve">
-    <value>Field {0} cannot be longer than {1} characters.</value>
+    <value>The field {0} cannot be longer than {1} characters.</value>
   </data>
   <data name="RequiredField" xml:space="preserve">
-    <value>Field {0} is required.</value>
+    <value>The field {0} is required.</value>
   </data>
   <data name="ERR004" xml:space="preserve">
     <value>The country Id is not valid.</value>
