--- a/Fantasy/Fantasy.Shared/Resources/Literals.resx
+++ b/Fantasy/Fantasy.Shared/Resources/Literals.resx
@@ -237,4 +237,25 @@
   <data name="RecordCreatedOk" xml:space="preserve">
     <value>Record created successfully.</value>
   </data>
+  <data name="Admin" xml:space="preserve">
+    <value>Admin</value>
+  </data>
+  <data name="User" xml:space="preserve">
+    <value>User</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>First Name</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Last Name</value>
+  </data>
+  <data name="UserType" xml:space="preserve">
+    <value>User Type</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>No</value>
+  </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Please wait ...</value>
+  </data>
 </root>
