Add literals and fix error

--- a/Fantasy/Fantasy.Shared/Resources/Literals.es.resx
+++ b/Fantasy/Fantasy.Shared/Resources/Literals.es.resx
@@ -348,4 +348,313 @@
   <data name="EmailAlreadyExists" xml:space="preserve">
     <value>El correo que ingresaste ya existe.</value>
   </data>
+  <data name="Send" xml:space="preserve">
+    <value>Enviar</value>
+  </data>
+  <data name="MailForwarding" xml:space="preserve">
+    <value>Reenvío de correo</value>
+  </data>
+  <data name="ResendAccountActivationEmail" xml:space="preserve">
+    <value>Reenviar correo de activación de cuenta</value>
+  </data>
+  <data name="CurrentPassword" xml:space="preserve">
+    <value>Contraseña Actual</value>
+  </data>
+  <data name="NewPassword" xml:space="preserve">
+    <value>Nueva Contraseña</value>
+  </data>
+  <data name="PasswordChangedSuccessfully" xml:space="preserve">
+    <value>Contraseña Modificada con éxito.</value>
+  </data>
+  <data name="ChangePassword" xml:space="preserve">
+    <value>Cambiar Contraseña</value>
+  </data>
+  <data name="RecoverPasswordMessage" xml:space="preserve">
+    <value>Se te ha enviado un correo electrónico con las instrucciones para recuperar su contraseña.</value>
+  </data>
+  <data name="PasswordRecoveredMessage" xml:space="preserve">
+    <value>Contraseña cambiada con éxito, ahora puede ingresar con su nueva contraseña.</value>
+  </data>
+  <data name="PasswordRecovery" xml:space="preserve">
+    <value>Recuperación de Contraseña</value>
+  </data>
+  <data name="ForgottenYourPassword" xml:space="preserve">
+    <value>¿Has olvidado tu contraseña?</value>
+  </data>
+  <data name="Tournament" xml:space="preserve">
+    <value>Torneo</value>
+  </data>
+  <data name="Tournaments" xml:space="preserve">
+    <value>Torneos</value>
+  </data>
+  <data name="IsActive" xml:space="preserve">
+    <value>Esta Activo</value>
+  </data>
+  <data name="Remarks" xml:space="preserve">
+    <value>Comentarios</value>
+  </data>
+  <data name="ERR009" xml:space="preserve">
+    <value>El código de torneo no es válido.</value>
+  </data>
+  <data name="TournamentActive" xml:space="preserve">
+    <value>El torneo está activo</value>
+  </data>
+  <data name="TournamentInactive" xml:space="preserve">
+    <value>El torneo está inactivo</value>
+  </data>
+  <data name="Activate" xml:space="preserve">
+    <value>Activar</value>
+  </data>
+  <data name="Deactivate" xml:space="preserve">
+    <value>Desactivar</value>
+  </data>
+  <data name="AddTeamToTournament" xml:space="preserve">
+    <value>Adicionar Equipo a Torneo</value>
+  </data>
+  <data name="AddTeam" xml:space="preserve">
+    <value>Adicionar Equipo</value>
+  </data>
+  <data name="SelectATeam" xml:space="preserve">
+    <value>-- Selecciona un Equipo --</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Fecha</value>
+  </data>
+  <data name="Local" xml:space="preserve">
+    <value>Local</value>
+  </data>
+  <data name="Visitor" xml:space="preserve">
+    <value>Visitante</value>
+  </data>
+  <data name="GoalsLocal" xml:space="preserve">
+    <value>Goles del Local</value>
+  </data>
+  <data name="GoalsVisitor" xml:space="preserve">
+    <value>Goles del Visitante</value>
+  </data>
+  <data name="ERR010" xml:space="preserve">
+    <value>El código del equipo local no es válido.</value>
+  </data>
+  <data name="ERR011" xml:space="preserve">
+    <value>El código del equipo visitante no es válido.</value>
+  </data>
+  <data name="ERR012" xml:space="preserve">
+    <value>El código del partido no es válido.</value>
+  </data>
+  <data name="AddMatchToTournament" xml:space="preserve">
+    <value>Adicionar partido a torneo</value>
+  </data>
+  <data name="Match" xml:space="preserve">
+    <value>Partido</value>
+  </data>
+  <data name="Matches" xml:space="preserve">
+    <value>Partidos</value>
+  </data>
+  <data name="MatchInactive" xml:space="preserve">
+    <value>El partido está inactivo</value>
+  </data>
+  <data name="MatchActive" xml:space="preserve">
+    <value>El partido está activo</value>
+  </data>
+  <data name="SelectDate" xml:space="preserve">
+    <value>Seleccione una fecha...</value>
+  </data>
+  <data name="SelectTime" xml:space="preserve">
+    <value>Seleccione una hora...</value>
+  </data>
+  <data name="MustSelectLocalTeam" xml:space="preserve">
+    <value>Debe seleccionar un equipo local.</value>
+  </data>
+  <data name="MustSelectVisitorTeam" xml:space="preserve">
+    <value>Debe seleccionar un equipo visitante.</value>
+  </data>
+  <data name="Group" xml:space="preserve">
+    <value>Grupo</value>
+  </data>
+  <data name="Groups" xml:space="preserve">
+    <value>Grupos</value>
+  </data>
+  <data name="Code" xml:space="preserve">
+    <value>Código</value>
+  </data>
+  <data name="Users" xml:space="preserve">
+    <value>Usuarios</value>
+  </data>
+  <data name="Add" xml:space="preserve">
+    <value>Adicionar</value>
+  </data>
+  <data name="Confirmed" xml:space="preserve">
+    <value>Confirmado</value>
+  </data>
+  <data name="ERR013" xml:space="preserve">
+    <value>El código de usuario no es válido.</value>
+  </data>
+  <data name="ERR014" xml:space="preserve">
+    <value>El código del grupo no es válido.</value>
+  </data>
+  <data name="ERR015" xml:space="preserve">
+    <value>El código de usuario grupo no es válido.</value>
+  </data>
+  <data name="Points" xml:space="preserve">
+    <value>Puntos</value>
+  </data>
+  <data name="ERR016" xml:space="preserve">
+    <value>El código de la predicción no es válido.</value>
+  </data>
+  <data name="Members" xml:space="preserve">
+    <value>Miembros</value>
+  </data>
+  <data name="GroupDetails" xml:space="preserve">
+    <value>Detalles de Grupo</value>
+  </data>
+  <data name="JoinGroup" xml:space="preserve">
+    <value>Unirme a un grupo</value>
+  </data>
+  <data name="MyGroups" xml:space="preserve">
+    <value>Mis Grupos</value>
+  </data>
+  <data name="NoGroups" xml:space="preserve">
+    <value>No perteneces a ningún grupo. Puedes unirte a uno con la URL o el código compartido por el administrador del grupo, o bien, ver los grupos disponibles en la página de inicio y luego pedirle al administrador que te active para poder ingresar tus predicciones. También puedes crear tu propio grupo de amigos.</value>
+  </data>
+  <data name="Inactive" xml:space="preserve">
+    <value>Inactivo</value>
+  </data>
+  <data name="SelectATournament" xml:space="preserve">
+    <value>-- Seleccione un Torneo --</value>
+  </data>
+  <data name="GroupCreated" xml:space="preserve">
+    <value>Se ha creado el grupo: {0}, con el código: {1}, por favor envíe el código del grupo a las personas que deseen unirse a este grupo.</value>
+  </data>
+  <data name="Active" xml:space="preserve">
+    <value>Activo</value>
+  </data>
+  <data name="UserAddedToGroupOk" xml:space="preserve">
+    <value>Usuario agregado al grupo. Ya el usuario puede entrar e ingresar sus predicciones.</value>
+  </data>
+  <data name="ERR017" xml:space="preserve">
+    <value>El código del grupo no es válido.</value>
+  </data>
+  <data name="JoinExistingGroup" xml:space="preserve">
+    <value>Unirse a un grupo existente</value>
+  </data>
+  <data name="ConfirmGroupMessage" xml:space="preserve">
+    <value>Para unirse al grupo: {0}, haga click en el botón.</value>
+  </data>
+  <data name="CopyInvitationURLTitle" xml:space="preserve">
+    <value>Copiar invitación</value>
+  </data>
+  <data name="InvitationURLCopied" xml:space="preserve">
+    <value>Link de invitación al grupo {0} copiado al portapapeles. Compartirlo con sus amigos para que se unan al grupo.</value>
+  </data>
+  <data name="Predictions" xml:space="preserve">
+    <value>Predicciones</value>
+  </data>
+  <data name="Positions" xml:space="preserve">
+    <value>Posiciones</value>
+  </data>
+  <data name="Watch" xml:space="preserve">
+    <value>Ver</value>
+  </data>
+  <data name="Prediction" xml:space="preserve">
+    <value>Predicción</value>
+  </data>
+  <data name="WatchPredictions" xml:space="preserve">
+    <value>Ver predicciones</value>
+  </data>
+  <data name="CloseMatch" xml:space="preserve">
+    <value>Cerrar Partido</value>
+  </data>
+  <data name="CloseMatchConfirmMessage" xml:space="preserve">
+    <value>¿Estás seguro de cerrar el partido {0} Vs. {1}?</value>
+  </data>
+  <data name="CloseMatchTitle" xml:space="preserve">
+    <value>Cerrar Partido</value>
+  </data>
+  <data name="GoalsLocalError" xml:space="preserve">
+    <value>Debes ingresar un valor mayor o igual a cero en goles del local.</value>
+  </data>
+  <data name="GoalsVisitorError" xml:space="preserve">
+    <value>Debes ingresar un valor mayor o igual a cero en goles del visitante.</value>
+  </data>
+  <data name="ERR018" xml:space="preserve">
+    <value>Este partido ya no admite predicciones.</value>
+  </data>
+  <data name="RealScore" xml:space="preserve">
+    <value>Marcador Real</value>
+  </data>
+  <data name="PredictedScore" xml:space="preserve">
+    <value>Marcador Predecido</value>
+  </data>
+  <data name="PredictionsBalance" xml:space="preserve">
+    <value>Resumen de Predicciones</value>
+  </data>
+  <data name="AdminUsersGroup" xml:space="preserve">
+    <value>Administrar usuarios de un grupo</value>
+  </data>
+  <data name="AboutText" xml:space="preserve">
+    <value>&lt;p&gt;Sistema donde diferentes grupos de amigos pueden hacer predicciones sobre torneos de fútbol. En Colombia, se le llama “Polla”; en Argentina, “Prode”; y en Estados Unidos, “Fantasy”. La idea es que cualquier número de torneos de fútbol, como la Copa América, el Mundial, la Eurocopa, la Champions League, o el Torneo Colombiano, entre otros, pueda ser registrado. Los grupos de amigos podrán formar sus propias “Pollas” y realizar predicciones sobre los partidos. Una vez completados los partidos y aplicadas las reglas de negocio, el participante que acumule más puntos ganará la “Fantasy”, la “Polla” o como se le denomine en su país.&lt;/p&gt;
+    
+    &lt;p&gt;Cada usuario podrá crear múltiples grupos o unirse a grupos existentes para participar en cualquier torneo de fútbol habilitado por el administrador. El creador del grupo será considerado el administrador de dicho grupo y podrá definir las condiciones para repartir el premio, por ejemplo:&lt;/p&gt;
+    &lt;ul&gt;
+        &lt;li&gt;70% para el primer puesto.&lt;/li&gt;
+        &lt;li&gt;20% para el segundo puesto.&lt;/li&gt;
+        &lt;li&gt;10% para el tercer puesto.&lt;/li&gt;
+    &lt;/ul&gt;
+    &lt;br/&gt;
+    &lt;p&gt;El administrador también tendrá la facultad de activar o desactivar a los miembros de su grupo. Por ejemplo, si un miembro no ha pagado el valor correspondiente a la polla, el administrador podrá desactivarlo, y un usuario inactivo no podrá ingresar predicciones.&lt;/p&gt;
+
+    &lt;p&gt;La forma de obtener puntos es la siguiente:&lt;/p&gt;
+    &lt;ul&gt;
+        &lt;li&gt;5 puntos por acertar el ganador o acertar un empate.&lt;/li&gt;
+        &lt;li&gt;2 puntos por acertar los goles del equipo local.&lt;/li&gt;
+        &lt;li&gt;2 puntos por acertar los goles del equipo visitante.&lt;/li&gt;
+        &lt;li&gt;1 punto por acertar la diferencia de goles.&lt;/li&gt;
+    &lt;/ul&gt;
+    &lt;br/&gt;
+    &lt;p&gt;El máximo de puntos por partido será 10, en caso de acertar el resultado perfecto. Ten en cuenta las siguientes consideraciones:&lt;/p&gt;
+    &lt;ul&gt;
+        &lt;li&gt;Solo se podrán ingresar o modificar predicciones hasta 10 minutos antes de iniciar un partido.&lt;/li&gt;
+        &lt;li&gt;El resultado se basará en los 90 minutos de tiempo reglamentario más las adiciones. No se tendrán en cuenta los goles en tiempos extra o penales.&lt;/li&gt;
+        &lt;li&gt;Los partidos de segunda ronda en adelante otorgarán el doble de puntos.&lt;/li&gt;
+    &lt;/ul&gt;</value>
+  </data>
+  <data name="DoublePoints" xml:space="preserve">
+    <value>Puntaje Doble</value>
+  </data>
+  <data name="DoublePointsMatchMessage" xml:space="preserve">
+    <value>Partido de Doble Puntaje</value>
+  </data>
+  <data name="SinglePointsMatchMessage" xml:space="preserve">
+    <value>Partido de Puntaje Sencillo</value>
+  </data>
+  <data name="IsImageSquare" xml:space="preserve">
+    <value>¿La imagen es cuadrada?</value>
+  </data>
+  <data name="ImageIsSquare" xml:space="preserve">
+    <value>La imagen es cuadrada</value>
+  </data>
+  <data name="ImageIsRectangular" xml:space="preserve">
+    <value>La imagen es rectangular</value>
+  </data>
+  <data name="Square" xml:space="preserve">
+    <value>Cuadrada</value>
+  </data>
+  <data name="Rectangular" xml:space="preserve">
+    <value>Rectangular</value>
+  </data>
+  <data name="Spanish" xml:space="preserve">
+    <value>Español</value>
+  </data>
+  <data name="English" xml:space="preserve">
+    <value>Inglés</value>
+  </data>
+  <data name="ReOpenMatch" xml:space="preserve">
+    <value>Volver a abrir el partido</value>
+  </data>
+  <data name="ReOpenMatchConfirm" xml:space="preserve">
+    <value>¿Estás segura de volver a abrir el {0}: {1}?</value>
+  </data>
+  <data name="ReOpenMatchMessage" xml:space="preserve">
+    <value>El partido ha sido reabierto</value>
+  </data>
 </root>
